[project]
name = "bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiodns>=4.0.0",
    "aiohttp>=3.13.3",
    "msgspec>=0.20.0",
    "orjson>=3.11.6",
    "polars[async]>=1.37.1",
    "uvloop>=0.22.1",
    "yarl>=1.22.0",
]
